k8/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-pr-PR_NUMBER_PLACEHOLDER
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
      pr-number: PR_NUMBER_PLACEHOLDER
  template:
    metadata:
      labels:
        app: myapp
        pr-number: PR_NUMBER_PLACEHOLDER
    spec:
      containers:
        - name: myapp
          image: myapp:PR_NUMBER_PLACEHOLDER
          ports:
            - containerPort: 8000
