k8/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-pr-PR_NUMBER_PLACEHOLDER
spec:
  selector:
    app: myapp
    pr-number: PR_NUMBER_PLACEHOLDER
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
